MAGETWO-49336: Publication of breaking changes

--- a/_includes/backward-incompatible-changes/open-source/2.3.1-2.3-develop.html
+++ b/_includes/backward-incompatible-changes/open-source/2.3.1-2.3-develop.html
@@ -50,6 +50,10 @@
         <td>[protected] Method has been added.</td>
     </tr>
     <tr>
+        <td>Magento\Backend\Model\Url::setScope</td>
+        <td>[public] Method has been added.</td>
+    </tr>
+    <tr>
         <td>Magento\Backend\Model\Auth\Session::destroy</td>
         <td>[public] Method has been added.</td>
     </tr>
