MAGETWO-49336: Publication of breaking changes

--- a/_includes/backward-incompatible-changes/commerce/2.3.1-2.3-develop.html
+++ b/_includes/backward-incompatible-changes/commerce/2.3.1-2.3-develop.html
@@ -6,6 +6,10 @@
         <th>How it changed</th>
     </tr>
     <tr>
+        <td>Magento\Invitation\Block\Customer\Form\Register::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
         <td>Magento\CustomerCustomAttributes\Block\Adminhtml\Customer\ValidationMessages</td>
         <td>Class was added.</td>
     </tr>
