--- a/_includes/backward-incompatible-changes/open-source/2.3.1-2.3-develop.html
+++ b/_includes/backward-incompatible-changes/open-source/2.3.1-2.3-develop.html
@@ -6,6 +6,130 @@
         <th>How it changed</th>
     </tr>
     <tr>
+        <td>Magento\Search\Block\Adminhtml\Dashboard\Last::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Search\Block\Adminhtml\Dashboard\Top::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Review\Model\ResourceModel\Rating::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Review\Model\ResourceModel\Review\Product\Collection::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Reports\Model\ResourceModel\Product\Collection::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Reports\Model\ResourceModel\Product\Lowstock\Collection::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Reports\Model\ResourceModel\Product\Index\Collection\AbstractCollection::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Downloadable\Block\Checkout\Cart\Item\Renderer::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Customer\Block\Form\Register::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Config\Model\Config\Structure\AbstractElement::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Config\Model\Config\Structure\Element\AbstractComposite::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Config\Model\Config\Structure\Element\Field::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Config\Model\Config\Structure\Element\Group::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Config\Model\Config\Structure\Element\Section::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Checkout\Block\Cart\Item\Renderer::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\CatalogSearch\Model\ResourceModel\Search\Collection::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\CatalogSearch\Model\ResourceModel\Fulltext\Collection::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\CatalogSearch\Model\ResourceModel\Advanced\Collection::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Catalog\Ui\DataProvider\Product\Form\Modifier\AdvancedPricing::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Catalog\Model\Product::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Catalog\Model\ResourceModel\Product\Collection::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Catalog\Model\ResourceModel\Product\Indexer\Price\DefaultPrice::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Catalog\Model\ResourceModel\Product\Compare\Item\Collection::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Catalog\Block\Product\ProductList\Related::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Catalog\Block\Product\ProductList\Upsell::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Catalog\Block\Adminhtml\Product\Grid::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Catalog\Block\Adminhtml\Product\Edit\Tab\Alerts\Price::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Catalog\Block\Adminhtml\Product\Edit\Tab\Alerts\Stock::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Bundle\Model\ResourceModel\Selection\Collection::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Bundle\Block\Checkout\Cart\Item\Renderer::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Backend\Model\Menu\Item::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
         <td>Magento\Framework\View\Element\AbstractBlock::__construct</td>
         <td>[public] Added an optional constructor parameter to extendable @api class.</td>
     </tr>
