MAGETWO-49336: Publication of breaking changes

--- a/_includes/backward-incompatible-changes/open-source/2.3.1-2.3-develop.html
+++ b/_includes/backward-incompatible-changes/open-source/2.3.1-2.3-develop.html
@@ -154,8 +154,16 @@
         <td>[public] Method has been added.</td>
     </tr>
     <tr>
+        <td>Magento\Reports\Block\Adminhtml\Grid::__construct</td>
+        <td>[public] Method has been added.</td>
+    </tr>
+    <tr>
         <td>Magento\Elasticsearch\Elasticsearch5\SearchAdapter\Query\Builder::$sortBuilder</td>
         <td>[protected] Property has been added.</td>
+    </tr>
+    <tr>
+        <td>Magento\Directory\Model\ResourceModel\Country::__construct</td>
+        <td>[public] Method has been added.</td>
     </tr>
     <tr>
         <td>Magento\CatalogSearch\Model\ResourceModel\Advanced\Collection::setOrder</td>
