--- a/_includes/backward-incompatible-changes/commerce/2.3.1-2.3-develop.html
+++ b/_includes/backward-incompatible-changes/commerce/2.3.1-2.3-develop.html
@@ -1,5 +1,5 @@
 
-<h3 id="2.3.1-2.3-develop-class">Class changes</h3>
+<h3 id="2.3.1-2.3-develop-class-ee" class="ee-only">Class changes</h3>
 <table><tbody>
     <tr>
         <th>What changed</th>
