MAGETWO-49336: Publication of breaking changes

--- a/_includes/backward-incompatible-changes/open-source/2.3.1-2.3-develop.html
+++ b/_includes/backward-incompatible-changes/open-source/2.3.1-2.3-develop.html
@@ -14,6 +14,10 @@
         <td>[public] Method parameter typing changed.</td>
     </tr>
     <tr>
+        <td>Magento\Sales\Block\Adminhtml\Order\View::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
         <td>Magento\Review\Model\ResourceModel\Rating::__construct</td>
         <td>[public] Method parameter typing changed.</td>
     </tr>
@@ -59,6 +63,10 @@
     </tr>
     <tr>
         <td>Magento\Config\Model\Config\Structure\Element\Section::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Checkout\Block\Cart\Totals::__construct</td>
         <td>[public] Method parameter typing changed.</td>
     </tr>
     <tr>
@@ -144,6 +152,10 @@
     <tr>
         <td>Magento\Framework\Search\Request\Builder::setSort</td>
         <td>[public] Method has been added.</td>
+    </tr>
+    <tr>
+        <td>Magento\Wishlist\Model\ResourceModel\Item\Collection::_renderFiltersBefore</td>
+        <td>[protected] Method has been added.</td>
     </tr>
     <tr>
         <td>Magento\Wishlist\Block\Customer\Wishlist\Item\Column\Cart::__construct</td>
