--- a/_includes/backward-incompatible-changes/commerce/2.3.1-2.3-develop.html
+++ b/_includes/backward-incompatible-changes/commerce/2.3.1-2.3-develop.html
@@ -6,6 +6,14 @@
         <th>How it changed</th>
     </tr>
     <tr>
+        <td>Magento\SalesArchive\Block\Adminhtml\Sales\Order\View\Buttons::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
+        <td>Magento\Rma\Block\Adminhtml\Order\View\Buttons::__construct</td>
+        <td>[public] Method parameter typing changed.</td>
+    </tr>
+    <tr>
         <td>Magento\Invitation\Block\Customer\Form\Register::__construct</td>
         <td>[public] Method parameter typing changed.</td>
     </tr>
