--- a/_includes/layout/header-scripts.html
+++ b/_includes/layout/header-scripts.html
@@ -20,6 +20,11 @@
       baseUrl: "https://devdocs.magento.com"
     },
     {
+      label: "User Guide",
+      name: "merchdocs_ee",
+      baseUrl: "https://docs.magento.com/m2/ee/user_guide"
+    },
+    {
       label: "PWA",
       name: "pwa-devdocs",
       baseUrl: "https://magento-research.github.io/pwa-studio"
@@ -28,11 +33,6 @@
       label: "Order Management",
       name: "oms-en",
       baseUrl: "https://omsdocs.magento.com"
-    },
-    {
-      label: "User Guide",
-      name: "merchdocs_ce",
-      baseUrl: "https://docs.magento.com/m2/ce/user_guide"
     }
   ];
 </script>
