--- a/_includes/layout/header-scripts.html
+++ b/_includes/layout/header-scripts.html
@@ -27,7 +27,7 @@
     {
       label: "PWA",
       name: "pwa-devdocs",
-      baseUrl: "https://magento-research.github.io/pwa-studio"
+      baseUrl: "https://magento.github.io/pwa-studio"
     },
     {
       label: "Order Management",
