--- a/_includes/layout/page-header.html
+++ b/_includes/layout/page-header.html
@@ -1,11 +1,12 @@
 <!-- page-header -->
 <section class="page-intro">
 {% if page.guide_version != site.version %}
-<span class="ee-only">{{site.data.var.ee}} only</span>	<div class="message-banner versions">
-{% endif %}You are reading the documentation for version {{page.guide_version}}. <a href="{{page.canonical_url}}">{{site.version}}</a> is the latest version available.
+<div class="message-banner versions">
+You are reading the documentation for version {{page.guide_version}}. <a href="{{page.canonical_url}}">{{site.version}}</a> is the latest version available.
 Ensure you are reading the documentation for your version of Magento.
 </div>
 {% endif %}
+
 {% if page.ee_only == true %}
 <span class="ee-only">{{site.data.var.ee}} only</span>
 {% endif %}
