Separated numbers a bit.

--- a/_includes/layout/page-header.html
+++ b/_includes/layout/page-header.html
@@ -2,7 +2,7 @@
 <section class="page-intro">
 {% if page.guide_version != site.version %}
 <div class="message-banner versions">
-You are reading the documentation for version {{page.guide_version}}. <a href="{{page.canonical_url}}">{{site.version}}</a> is the latest version available.
+You are reading the documentation for version {{page.guide_version}}. Magento <a href="{{page.canonical_url}}">{{site.version}}</a> is the latest version available.
 Ensure you are reading the documentation for your version of Magento.
 </div>
 {% endif %}
