--- a/_includes/layout/page-header.html
+++ b/_includes/layout/page-header.html
@@ -1,6 +1,6 @@
 <!-- page-header -->
 <section class="page-intro">
-{% if page.guide_version != site.version %}
+{% if page.guide_version != nil and page.guide_version != site.version %}
   <div class="message-banner version-banner">
     You are reading the documentation for version {{page.guide_version}}. Magento {{site.version}} is the latest version available.
     Ensure you are reading the documentation for your version of Magento.
