--- a/common/css/devdocs.css
+++ b/common/css/devdocs.css
@@ -22,10 +22,12 @@
   font-weight:500;
 }
 
-/* Paragraph that represents a begiging of a procedure - should have a list of steps following */
+/* Paragraph that represents a beginning of a procedure - should have an ordered list of steps following */
 .procedure {
   font-weight: bold;
-  margin-left: 2.5em;
-}.message-banner.version-banner {
+  margin-left: 1.0em;
+}
+
+.message-banner.version-banner {
   margin-bottom: 15px;
 }
