New Procedure Class (#5483)
* Add class name and example usage

* fix numbering

* Update devdocs.css

* fix fastly procedures (#5443)

* Fix Cloud procedures for Docker and integrations (#5457)

* fix docker procedures

* fix integrations topics

* Adjust single action procedures

* Fix procedures in Cloud includes and references (#5444)

* update includes

* update reference topics

had to change the CLI topic around

* fixed setup files

* Apply suggestions from code review

Co-Authored-By: Margaret Eker <meker@adobe.com>

* return config file to original state

* original state

* remove procedural single step, improve readability

* Apply suggestions from code review

Co-Authored-By: Margaret Eker <meker@adobe.com>

* setup and live topics (#5476)

* Fix procedures in Cloud project topics and env topics (#5474)

* Project topics and env topics

* Apply suggestions from code review

Co-Authored-By: Margaret Eker <meker@adobe.com>

* Fix release archive for MD001

* Fix leftover procedure items

* Apply suggestions from code review

Co-Authored-By: Margaret Eker <meker@adobe.com>

* broken link

--- a/common/css/devdocs.css
+++ b/common/css/devdocs.css
@@ -21,6 +21,13 @@
 .ref-list dt{
   font-weight:500;
 }
+
+/* Paragraph that represents a beginning of a procedure - should have an ordered list of steps following */
+.procedure {
+  font-weight: bold;
+  margin-left: 1.0em;
+}
+
 .message-banner.version-banner {
   margin-bottom: 15px;
 }
