Update Give us feedback template
Add full URL of the page in the GH issue title

--- a/_includes/layout/page-info.html
+++ b/_includes/layout/page-info.html
@@ -27,7 +27,7 @@
 
   {% if page.feedback_link %}
   <div class="new-issue">
-    <a href="{{ page.github_repo }}issues/new?title=Feedback on page: {{ page.url }}" target="_blank" rel="noopener">
+    <a href="{{ page.github_repo }}issues/new?title=Feedback on page: {{ site.url }}{{ site.baseurl }}{{ page.url }}" target="_blank" rel="noopener">
       Give us feedback
     </a>
   </div>
