Added new devdocs class for pseudo headers

--- a/common/css/devdocs.css
+++ b/common/css/devdocs.css
@@ -29,11 +29,10 @@
 }
 
 /* Paragraph that introduces important information (e.g., Related topics, Next step, Examples), but does not qualify as a proper heading */
-.pseudo-header {
+.ref-header {
   font-weight: bold;
-  font-size: 1.375em;
+  font-size: 1.3em;
   margin: 1.5em 0 0.5em 0;
-  color: #767676;
 }
 
 .message-banner.version-banner {
