--- a/common/css/devdocs.css
+++ b/common/css/devdocs.css
@@ -28,7 +28,7 @@
   margin-left: 1.0em;
 }
 
-/* Paragraph that introduces important information (e.g., Related topics, Next step, Examples), but does not qualify as a proper heading */
+/* Paragraph that introduces important reference information (e.g., Related topics, Next step, Previous step), but does not qualify as a proper heading. Mimics the current H3 style */
 .ref-header {
   font-weight: bold;
   font-size: 1.3em;
