--- a/common/css/devdocs.css
+++ b/common/css/devdocs.css
@@ -1,8 +1,15 @@
+/* Banner on top of the site header */
 .message-banner {
   margin: 0;
   padding: 10px;
 }
 
+/* Banner on top of the page for older versions */
+.message-banner.version-banner {
+  margin-bottom: 15px;
+}
+
+/* Info box on when the page was updated */
 .page-updated {
   margin: 0 0 10px 0;
   color: #767676;
@@ -13,6 +20,7 @@
   width: 18px;
   height: 18px;
 }
+
 /* Reference styles */
 .ref-list {
   margin-bottom: 2.5em;
@@ -22,19 +30,9 @@
   font-weight:500;
 }
 
-/* Paragraph that represents a beginning of a procedure - should have an ordered list of steps following */
-.procedure {
-  font-weight: bold;
-  margin-left: 1.0em;
-}
-
 /* Paragraph that introduces important reference information (e.g., Related topics, Next step, Previous step), but does not qualify as a proper heading. Mimics the current H3 style */
 .ref-header {
   font-weight: bold;
   font-size: 1.3em;
   margin: 1.5em 0 0.5em 0;
-}
-
-.message-banner.version-banner {
-  margin-bottom: 15px;
 }
